# koudaisai-plans-info-api

./: .gitignore  Cargo.toml  gen.sh  wrangler.toml
docs/: openapi.yml
src/: icon.rs  jwks.rs  jwt_verifier.rs  lib.rs  models.rs  routes.rs  util.rs
src/js/: kv_bulk.js
src/models/: base.rs  details.rs  keys.rs  plan.rs  plan_type.rs  products.rs  schedule.rs
src/routes/: plans.rs
src/routes/admin/: plans.rs
src/routes/admin/plans/: details.rs  icon.rs
src/routes/plans/: details.rs  icon.rs
src/service/: discord.rs
