[package]
name = "koudaisai-plans-info-api"
version = "0.1.0"
edition = "2021"
authors = ["pasmophobia <l@leonmatsuistroemsvik.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["http", "axum", "d1"] }
serde = "1.0.219"
serde_json = "1.0.142"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
chrono = { version = "0.4.41", features = ["serde"] }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
