[package]
name = "koudaisai-plans-info-api"
version = "0.1.0"
edition = "2021"
authors = ["pasmophobia <l@leonmatsuistroemsvik.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["http", "axum", "d1"] }
serde = "1.0.219"
serde_json = "1.0.142"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.99"
thiserror = "2.0.16"
